--- a/SofaAppen/SofaAppen/Views/AboutPage.xaml
+++ b/SofaAppen/SofaAppen/Views/AboutPage.xaml
@@ -29,8 +29,8 @@
         </StackLayout>
         <ScrollView Grid.Row="1">
             <StackLayout Orientation="Vertical" Padding="30,24,30,24" Spacing="10">
-                <Label Text="Start developing now" FontSize="Title"/>
-                <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="0,0,0,0"/>
+                <Label Text="Velkommen til København Zoo" FontSize="Title"/>
+                <Label Text="Vores park tilbyder et væld af gode oplevelser og en rig dyreverden i vores zoologiske have." FontSize="16" Padding="0,0,0,0"/>
                 <Label FontSize="16" Padding="0,24,0,0">
                     <Label.FormattedText>
                         <FormattedString>
