Added HistoryPage to the Xamarin application

--- a/SofaAppen/SofaAppen/AppShell.xaml
+++ b/SofaAppen/SofaAppen/AppShell.xaml
@@ -90,6 +90,9 @@
     <FlyoutItem Title="Animals" Icon="icon_feed.png">
         <ShellContent Route="AnimalsPage" ContentTemplate="{DataTemplate local:AnimalsPage}" />
     </FlyoutItem>
+    <FlyoutItem Title="Historie" Icon="icon_feed.png">
+        <ShellContent Route="HistoryPage" ContentTemplate="{DataTemplate local:HistoryPage}" />
+    </FlyoutItem>
 
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
     <MenuItem Text="Logout" StyleClass="MenuItemLayoutStyle" Clicked="OnMenuItemClicked">
