--- a/SofaAppen/SofaAppen/Views/EventsPage.xaml
+++ b/SofaAppen/SofaAppen/Views/EventsPage.xaml
@@ -18,7 +18,7 @@
 
         <Helpers:IndexToColorConverter x:Key="IndexToColorConverterText"
                                           EvenColor="#0f403d"
-                                          OddColor="#0f403d"/>
+                                          OddColor="#74b694"/>
     </ContentPage.Resources>
     
     <ContentPage.Content>
@@ -40,7 +40,7 @@
                                         <Label FontAttributes="Bold" Text="{Binding Name}" TextColor="{Binding ., Converter={StaticResource IndexToColorConverterText},ConverterParameter={x:Reference EventView}}"></Label>
                                     </StackLayout>
                                     <StackLayout Grid.Column="1" HorizontalOptions="End" Orientation="Vertical">
-                                        <Label>Læse mere</Label>
+                                        <Label TextColor="{Binding ., Converter={StaticResource IndexToColorConverterText},ConverterParameter={x:Reference EventView}}">Læse mere</Label>
                                     </StackLayout>
                                 </Grid>
                             </StackLayout>
