--- a/SofaAppen/SofaAppen/AppShell.xaml
+++ b/SofaAppen/SofaAppen/AppShell.xaml
@@ -99,6 +99,9 @@
     <FlyoutItem Title="Qr Scan" Icon="icon_feed.png">
         <ShellContent Route="QRScannerPage" ContentTemplate="{DataTemplate local:QRScannerPage}" />
     </FlyoutItem>
+    <FlyoutItem Title="Feedback" Icon="icon_feed.png">
+        <ShellContent Route="FeedbackPage" ContentTemplate="{DataTemplate local:FeedbackPage}" />
+    </FlyoutItem>
 
     <!--
         TabBar lets you define content that won't show up in a flyout menu. When this content is active
