--- a/SofaAppen/SofaAppen/Views/FeedbackPage.xaml
+++ b/SofaAppen/SofaAppen/Views/FeedbackPage.xaml
@@ -2,8 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:SofaAppen.ViewModels"
-             x:Class="SofaAppen.Views.FeedbackPage"
-             Title="{Binding Title}">
+             x:Class="SofaAppen.Views.FeedbackPage">
 
     <ContentPage.BindingContext>
         <vm:FeedbackViewModel />
@@ -20,20 +19,25 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
-        
+
         <StackLayout Grid.Row="0" BackgroundColor="#74b694" Orientation="Vertical" Padding="30,24,30,24" Spacing="10">
-            <Label Text="Fortæl os din mening" FontSize="Title" TextColor="#0f403d"/>
-            <Label Text="Feedback tekst" FontSize="16" Padding="0,0,0,0" TextColor="#0f403d"/>
-            <!--<Label x:Name="selectedRating" TextColor="#0f403d"/>-->
-            <Picker x:Name="categoryPicker" FontSize="Large" Title="Vælg category" TextColor="#0f403d"/>
+            <Label Text="Fortæl os din mening" FontSize="Title" TextColor="#0f403d" Margin="0,0,0,20"/>
+            
+
+
+            <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
+
+            <Picker ItemsSource="{Binding Categories}" ItemDisplayBinding="{Binding CategoryName}" SelectedItem="{Binding SelectedCategory}"
+                    FontSize="Large" Title="Vælg kategori" TextColor="#0f403d"/>
+
+            <!--<Picker x:Name="category" ItemsSource="{Binding Categories}" SelectedItem="{Binding SelectedCategory}" ItemDisplayBinding="{Binding Categories}" 
+                    IsVisible="{Binding IsError}" FontSize="Large" Title="Vælg kategori" TextColor="#0f403d"/>-->
+
+            <!--<Picker x:Name="categoryPicker" FontSize="Large" Title="Vælg categoryTest" TextColor="#0f403d"/>-->
+
+            <Label x:Name="selectedRating" TextColor="#0f403d"/>
             <Picker x:Name="ratingPicker" FontSize="Large" Title="Vælg bedømmelse" TextColor="#0f403d"/>
             <Editor x:Name="editor" Placeholder="Kommentar" PlaceholderColor="#0f403d" BackgroundColor="White" HeightRequest="200" MaxLength="250"/>
         </StackLayout>
-            <ScrollView Grid.Row="1">
-            <StackLayout BackgroundColor="Blue" Orientation="Vertical" Padding="30,24,30,24" Spacing="10">
-                <Label Text="Feedback overskrift" FontSize="Title" TextColor="#0f403d"/>
-                <Label Text="Feedback tekst" FontSize="16" Padding="0,0,0,0" TextColor="#0f403d"/>
-            </StackLayout>
-        </ScrollView>
     </Grid>
 </ContentPage>
